Simplify versioning for now to be just manual.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,7 +1,9 @@
 <Project>
-  <PropertyGroup>
-    <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)RoslynInternalKey.Private.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
+		<SignAssembly>True</SignAssembly>
+		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)RoslynInternalKey.Private.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
+
+  <Import Project="..\Version.props" />
 </Project>
