--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,5 +5,6 @@
 		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)RoslynInternalKey.Private.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
+	<Import Project="..\Directory.Build.props" />
   <Import Project="..\Version.props" />
 </Project>
