--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,10 +1,13 @@
 <Project>
+  <ItemGroup>
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.1.283" />
+  </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup Condition="'$(Configuration)' == 'Debug' and Exists('..\..\roslyn\Binaries\Debug\Dlls')">
     <PackageReference Include="Microsoft.Composition" Version="1.0.27" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Metadata" Version="1.4.1" />
+    <PackageReference Include="System.Reflection.Metadata" Version="1.4.2" />
     <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.0" />
 
@@ -40,7 +43,7 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+  <ItemGroup Condition="'$(Configuration)' == 'Release' or !Exists('..\..\roslyn\Binaries\Debug\Dlls')">
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="2.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Features" Version="2.1.0" />
