Don't register the override all members codefix
This avoids polluting the IDE with a codefix that is almost always
available

--- a/Version.props
+++ b/Version.props
@@ -1,6 +1,6 @@
 <Project InitialTargets="SetVersion">
 	<ItemGroup>
-		<PackageReference Include="GitInfo" Version="*" PrivateAssets="all" />
+		<PackageReference Include="GitInfo" Version="2.0.0" PrivateAssets="all" />
 	</ItemGroup>
 
 	<Target Name="GitVersion" />
